# claude-code-api

./: .api-keys.example  .dockerignore  .gitignore  CLAUDE_AGENT_SDK_ANALYSIS.md  Dockerfile  GETTING_STARTED.md  Makefile  README.md  SKILL.md  docker-compose.yml  pyproject.toml
.kamal/: secrets.example
claude_code_api/: __init__.py  auth.py  client.py  computer_use.py  server.py
config/: deploy.yml
examples/: README.md  streaming_chat.py  streaming_web_chat.py
scripts/: api_keys.py  test_sdk_spec.py
tests/: __init__.py  conftest.py  test_api_keys.py  test_auth.py  test_client.py  test_server.py
